PlanIt/src/assets/cmps/_BoardList.scss
.board-card {
  display: flex;
  margin-top: 12px;
  border-radius: 6px;
  padding-block-end: 35px;
  overflow: auto;
  flex-direction: column;
  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
  flex: 1;
  overflow-x: auto;
  width: 100%;
  align-self: stretch;

  .board-title {
    width: 100%;
    max-width: 148px;
    height: 32px;
    font-size: 18px;
    line-height: 32px;
    text-align: start;
    letter-spacing: normal;
    color: #172b4d;
    background-color: #ffffff;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .board-golders {
    display: flex;
    gap: 16px;
    padding-bottom: 8px;
    flex-wrap: nowrap;
    align-items: flex-start;
    box-sizing: border-box;
    height: 100%;
  }

  .group-card {
    display: flex;
    flex-direction: column;
    width: 272px;
    max-height: 100%;
    border-radius: 12px;
    padding: 6px 8px 6px 6px;
    background-color: #f4f5f7;
    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px 0px,
      rgba(9, 30, 66, 0.31) 0px 0px 1px 0px;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
      sans-serif;
    cursor: pointer;
    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;

    .group-header {
      display: flex;
      justify-content: space-between;
      align-items: center;

      h3 {
        display: block;
        padding: 6px 8px 6px 12px;
        background-color: transparent;
        overflow: hidden;
        font-size: 14px;
        font-weight: 600;
        line-height: 20px;
        margin: 0;
        color: #172b4de0;
        white-space: normal;
        cursor: pointer;
        overflow-wrap: anywhere;
      }
    }

    .group-title {
      margin: 0;
      font-size: 1.2rem;
      color: #333333;
      font-weight: bold;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      padding: 6px 8px 6px 12px;
    }

    .group-menu {
      margin-left: auto;
    }

    .tasks {
      max-height: 100vh;
      overflow-y: auto;
      margin-top: 8px;
      scrollbar-width: thin;
      padding: 2px;
      flex:1;

      .task {
        z-index: 10;
        min-height: 24px;
        padding: 8px 12px 4px;
        background-color: #ffffff;
        border-radius: 8px;
        box-shadow: 0px 1px 1px rgba(9, 30, 66, 0.25),
          0px 0px 1px rgba(9, 30, 66, 0.31);
        padding: 8px;
        margin-bottom: 8px;
        display: flex;
        flex-direction: column;
        gap: 4px;

        .task-title {
          margin: 0;
          font-size: 14px;
          color: #333333;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
        }

        .labels {
          margin-top: 4px;
          display: flex;
          flex-wrap: wrap;
          gap: 10px;

          .label {
            padding: 4px 8px;
            font-size: 0.8rem;
            color: #ffffff;
            border-radius: 4px;
            text-align: center;
          }
        }

        .members {
          display: flex;
          flex-wrap: wrap;
          gap: 4px;
          margin-top: auto;
          justify-content: flex-end;
          align-items: center;

          .member {
            background-color: #f3f4f6;
            padding: 4px 8px;
            border-radius: 100%;
            font-size: 0.8rem;
            text-align: center;
            line-height: 24px;
            color: #172b4d;
          }
        }

        &:hover {
          outline: #388bff auto 2px;
          // background-color: #172b4d;
        }
      }
    }
  }
}

.board-container {
  display: flex;
  flex-direction: column;
  // height: calc(100vh - 200px);
  overflow-x: auto;
  justify-content: space-between;
  padding: 0 10px;
  margin: 0;
  height: 100%;
}

.board-list {
  display: grid;
  grid-template-rows: auto 1fr;
  position: relative;
  flex-direction: column;
  align-items: flex-start;
  height: 100%;
}



/* Responsive Styles */
@media (max-width: 900px) {
  .board-container {
    height: auto;
    padding: 0;
  }

  .board-card {
    width: 100%;
    margin-bottom: 10px;
  }

  .board-title {
    font-size: 16px;
  }
}

